# axum-htmx-derive

./: Cargo.toml  LICENSE  README.md
axum-htmx-derive-boosted-by/: Cargo.toml
axum-htmx-derive-boosted-by/src/: lib.rs
axum-htmx-derive-core/: Cargo.toml
axum-htmx-derive-core/src/: boosted_by.rs  boosted_by_async.rs  lib.rs  tests.rs
src/: lib.rs
